--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Safe Noise Canceling</string>
+
+    <!-- Permission String -->
+    <string name="permission_req_msg">Application의 전체 기능을 이용하시려면 권한 허용이 필요합니다.</string>
+    <string name="permission_denied">권한 허용이 이루어지지 않아 Application 이용이 제한됩니다. 설정에서 권한을 허용해주세요.</string>
+
+    <!-- Service -->
+    <string name="soundservice_noti_channel">감지 작동중 알림</string>
+    <string name="soundservice_noti_title">Safe Noise Canceling</string>
+    <string name="soundservice_noti_msg">Safe Noise Canceling 서비스가 작동중입니다.</string>
 </resources>
