--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">Safe Noise Canceling</string>
 
+    <string name="title_activity_main">MainActivity</string>
+    <string name="title_home">홈</string>
+    <string name="title_history">기록</string>
+    <string name="title_setting">설정</string>
+
     <!-- Permission String -->
     <string name="permission_req_msg">Application의 전체 기능을 이용하시려면 권한 허용이 필요합니다.</string>
     <string name="permission_denied">권한 허용이 이루어지지 않아 Application 이용이 제한됩니다. 설정에서 권한을 허용해주세요.</string>
@@ -9,4 +14,14 @@
     <string name="soundservice_noti_channel">감지 작동중 알림</string>
     <string name="soundservice_noti_title">Safe Noise Canceling</string>
     <string name="soundservice_noti_msg">Safe Noise Canceling 서비스가 작동중입니다.</string>
+
+    <!-- History -->
+    <string name="history_msg">모든 기록은 사용자의 기기에만 저장됩니다!</string>
+    <string name="history_type">%1$s (%2$s%% 일치)</string>
+
+    <!-- Setting -->
+    <string name="setting_enable">서비스 활성화</string>
+    <string name="setting_calibration">마이크 보정</string>
+    <string name="setting_resethistory">인식 기록 초기화</string>
+    <string name="setting_author">가천대학교 소프트웨어학과 졸업작품 프로젝트\n5분반 7조 (김나형, 박다정, 선민재)\n2021.3 ~ 2022.6</string>
 </resources>
