--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,16 @@
     <!-- Setting -->
     <string name="setting_enable">서비스 활성화</string>
     <string name="setting_calibration">마이크 보정</string>
+    <string name="setting_calibration_title">주의</string>
+    <string name="setting_calibration_msg">정말 재보정을 하시겠습니까?\n보정하는 동안은 위험 소리 인식이 불가능하며, 무조건 보정을 완료해야 합니다!</string>
     <string name="setting_resethistory">인식 기록 초기화</string>
+    <string name="setting_resethistory_dialog_title">경고</string>
+    <string name="setting_resethistory_dialog_msg">정말 모든 기록을 삭제하시겠습니까?\n삭제 후에는 다시 복구할 수 없습니다!</string>
     <string name="setting_author">가천대학교 소프트웨어학과 졸업작품 프로젝트\n5분반 7조 (김나형, 박다정, 선민재)\n2021.3 ~ 2022.6</string>
+
+    <!-- Calibration -->
+    <string name="calibration_title">마이크 보정</string>
+    <string name="calibration_msg">보다 나은 인식을 위해 30초 간 마이크 보정이 필요합니다.\n\n주변 환경을 최대한 조용하게 해주시고,\n다른 소리를 내지 않도록 주의해주세요.\n\n음성은 저장되지 않습니다.</string>
+    <string name="calibration_start_button">보정 시작하기</string>
+    <string name="calibration_finish">보정이 끝났습니다.</string>
 </resources>
