--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,9 +28,14 @@
     <string name="setting_calibration_msg">정말 재보정을 하시겠습니까?\n보정하는 동안은 위험 소리 인식이 불가능하며, 무조건 보정을 완료해야 합니다!</string>
     <string name="setting_resethistory">인식 기록 초기화</string>
     <string name="setting_resethistory_dialog_msg">정말 모든 기록을 삭제하시겠습니까?\n삭제 후에는 다시 복구할 수 없습니다!</string>
+    <string name="setting_classifyperiod">인식 주기 설정</string>
+    <string name="setting_classifyperiod_msg">인식 주기가 짧을수록 배터리 사용량이 증가합니다.</string>
+    <string name="setting_classifyperiod_min">짧음</string>
+    <string name="setting_classifyperiod_max">김</string>
+    <string name="setting_classifyperiod_label">%1$s초</string>
     <string name="setting_micthreshold">마이크 민감도 설정</string>
-    <string name="setting_micthreshold_min">자주 인식</string>
-    <string name="setting_micthreshold_max">덜 인식</string>
+    <string name="setting_micthreshold_min">민감</string>
+    <string name="setting_micthreshold_max">둔감</string>
     <string name="setting_author">가천대학교 소프트웨어학과 졸업작품 프로젝트\n5분반 7조 (김나형, 박다정, 선민재)\n2021.3 ~ 2022.6</string>
 
     <!-- Calibration -->
